fix size issue for desktop (2025-02-04)

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <h3>Subscribe now and start streaming</h3>
+            <h2>Subscribe now and start streaming</h2>
             <div class="movies-grid">
                 <!-- Movie thumbnails will be dynamically inserted here -->
-                 <img src="assets/img//movieWall.png" alt="Movie 1" style="height: 80vh;">
+                 <img src="assets/img//movieWall.png" alt="Movie 1" style="width: 350px;">
             </div>
         </div>
         <div class="right-section">
