updated the features (2025-02-07)

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             
                 <div class="feature-row">
                     <div class="feature-name">Video quality</div>
-                    <div class="plan-column">HD</div>
                     <div class="plan-column">Full HD</div>
-                    <div class="plan-column">4K+HDR</div>
+                    <div class="plan-column">Full HD</div>
+                    <div class="plan-column">Full HD</div>
                 </div>
 
                 <div class="feature-row">
@@ -56,7 +56,7 @@
             
                 <div class="feature-row">
                     <div class="feature-name">Downloads available</div>
-                    <div class="plan-column"><span class="feature-cross">✕</span></div>
+                    <div class="plan-column"><span class="feature-check">✓</span></div>
                     <div class="plan-column"><span class="feature-check">✓</span></div>
                     <div class="plan-column"><span class="feature-check">✓</span></div>
                 </div>
