new ui for mobile view

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -44,6 +44,7 @@
                         </div>
                     </div>
                     <div class="starting-price">Starting at ₹99/month</div>
+                    <div class="expand-indicator"><i class="fas fa-chevron-down"></i></div>
                 </div>
                 <div class="prices">
                     <label class="price-content">
@@ -99,6 +100,7 @@
                         </div>
                     </div>
                     <div class="starting-price">Starting at ₹249/month</div>
+                    <div class="expand-indicator"><i class="fas fa-chevron-down"></i></div>
                 </div>
                 <div class="prices">
                     <label class="price-content">
@@ -154,6 +156,7 @@
                         </div>
                     </div>
                     <div class="starting-price">Starting at ₹449/month</div>
+                    <div class="expand-indicator"><i class="fas fa-chevron-down"></i></div>
                 </div>
                 <div class="prices">
                     <label class="price-content">
