text change "Start Watching Now – Stream Your Favorite Content!"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <h2>Subscribe now and start streaming</h2>
+            <h2>Start Watching Now – Stream Your Favorite Content!</h2>
             <div class="movies-grid">
                 <!-- Movie thumbnails will be dynamically inserted here -->
                  <img src="assets/img//movieWall.png" alt="Movie 1" style="width: 350px;">
