--- a/mobile/index.html
+++ b/mobile/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Subscribe now and start streaming</h2>
+            <h2>Stream Your Favorite Content!</h2>
         </div>
 
         <div class="plans">
