--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                         <span class="plan-name">STANDARD</span>
                         <span class="plan-check">✓</span>
                     </div>
-                    <span class="plan-price">₹170/month</span>
+                    <span class="plan-price">199/month</span>
                 </div>
                 <div class="plan premium">
                     <div class="plan-top">
                         <span class="plan-name">PREMIUM</span>
                         <span class="plan-check">✓</span>
                     </div>
-                    <span class="plan-price">₹350/month</span>
+                    <span class="plan-price">399/month</span>
                 </div>
             </div>
             <div class="subscription-duration">
@@ -104,18 +104,18 @@
         const prices = {
             'BASIC': {
                 1: 99,
-                6: 499,
-                12: 1000
+                6: 399,
+                12: 999
             },
             'STANDARD': {
-                1: 249,
-                6: 1245,
-                12: 2490
+                1: 199,
+                6: 1199,
+                12: 1999
             },
             'PREMIUM': {
-                1: 449,
-                6: 1796,
-                12: 4490
+                1: 399,
+                6: 1799,
+                12: 3999
             }
         };
         
